---
source: crates/rv-lockfile/tests/complex_lockfile_tests.rs
expression: parser
---
LockfileParser {
    sources: [
        Gem(
            GemSource {
                remotes: [
                    "https://rubygems.org/",
                ],
                specs: [
                    "activerecord",
                    "activesupport",
                    "concurrent-ruby",
                    "i18n",
                ],
            },
        ),
    ],
    specs: {
        "activerecord (7.0.4)": LazySpecification {
            name: "activerecord",
            version: Version {
                major: 7,
                minor: 0,
                patch: 4,
            },
            platform: Ruby,
            source: None,
            dependencies: [
                Dependency {
                    name: "activemodel",
                    requirements: [
                        VersionReq {
                            comparators: [
                                Comparator {
                                    op: Exact,
                                    major: 7,
                                    minor: Some(
                                        0,
                                    ),
                                    patch: Some(
                                        4,
                                    ),
                                    pre: Prerelease(""),
                                },
                            ],
                        },
                    ],
                    platforms: [],
                    source: None,
                    pinned: false,
                },
                Dependency {
                    name: "activesupport",
                    requirements: [
                        VersionReq {
                            comparators: [
                                Comparator {
                                    op: Exact,
                                    major: 7,
                                    minor: Some(
                                        0,
                                    ),
                                    patch: Some(
                                        4,
                                    ),
                                    pre: Prerelease(""),
                                },
                            ],
                        },
                    ],
                    platforms: [],
                    source: None,
                    pinned: false,
                },
            ],
            checksum: None,
            required_ruby_version: None,
            required_rubygems_version: None,
        },
        "activesupport (7.0.4)": LazySpecification {
            name: "activesupport",
            version: Version {
                major: 7,
                minor: 0,
                patch: 4,
            },
            platform: Ruby,
            source: None,
            dependencies: [
                Dependency {
                    name: "concurrent-ruby",
                    requirements: [
                        VersionReq {
                            comparators: [
                                Comparator {
                                    op: Tilde,
                                    major: 1,
                                    minor: Some(
                                        0,
                                    ),
                                    patch: None,
                                    pre: Prerelease(""),
                                },
                                Comparator {
                                    op: GreaterEq,
                                    major: 1,
                                    minor: Some(
                                        0,
                                    ),
                                    patch: Some(
                                        2,
                                    ),
                                    pre: Prerelease(""),
                                },
                            ],
                        },
                    ],
                    platforms: [],
                    source: None,
                    pinned: false,
                },
                Dependency {
                    name: "i18n",
                    requirements: [
                        VersionReq {
                            comparators: [
                                Comparator {
                                    op: GreaterEq,
                                    major: 1,
                                    minor: Some(
                                        6,
                                    ),
                                    patch: None,
                                    pre: Prerelease(""),
                                },
                                Comparator {
                                    op: Less,
                                    major: 2,
                                    minor: None,
                                    patch: None,
                                    pre: Prerelease(""),
                                },
                            ],
                        },
                    ],
                    platforms: [],
                    source: None,
                    pinned: false,
                },
            ],
            checksum: None,
            required_ruby_version: None,
            required_rubygems_version: None,
        },
        "concurrent-ruby (1.1.10)": LazySpecification {
            name: "concurrent-ruby",
            version: Version {
                major: 1,
                minor: 1,
                patch: 10,
            },
            platform: Ruby,
            source: None,
            dependencies: [],
            checksum: None,
            required_ruby_version: None,
            required_rubygems_version: None,
        },
        "i18n (1.12.0)": LazySpecification {
            name: "i18n",
            version: Version {
                major: 1,
                minor: 12,
                patch: 0,
            },
            platform: Ruby,
            source: None,
            dependencies: [
                Dependency {
                    name: "concurrent-ruby",
                    requirements: [
                        VersionReq {
                            comparators: [
                                Comparator {
                                    op: Tilde,
                                    major: 1,
                                    minor: Some(
                                        0,
                                    ),
                                    patch: None,
                                    pre: Prerelease(""),
                                },
                            ],
                        },
                    ],
                    platforms: [],
                    source: None,
                    pinned: false,
                },
            ],
            checksum: None,
            required_ruby_version: None,
            required_rubygems_version: None,
        },
    },
    dependencies: {
        "activerecord": Dependency {
            name: "activerecord",
            requirements: [],
            platforms: [],
            source: None,
            pinned: false,
        },
        "concurrent-ruby": Dependency {
            name: "concurrent-ruby",
            requirements: [],
            platforms: [],
            source: None,
            pinned: false,
        },
    },
    platforms: [
        Ruby,
        Specific {
            cpu: "x86_64",
            os: "linux",
            version: None,
        },
    ],
    bundler_version: Some(
        Version {
            major: 2,
            minor: 3,
            patch: 0,
        },
    ),
    ruby_version: Some(
        "3.1.0p0",
    ),
    checksums: {},
    strict: false,
}
